Final новая функциональность

--- a/src/blocks/element/element.css
+++ b/src/blocks/element/element.css
@@ -1,4 +1,5 @@
 @import url(./__delete/element__delete.css);
+@import url(./__delete/_active/element__delete_active.css);
 @import url(./__image/element__image.css);
 @import url(./__text/element__text.css);
 @import url(./__title/element__title.css);
